[package]
name = "apollo_class_manager_types"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
testing = ["mockall"]

[lints]
workspace = true

[dependencies]
apollo_compile_to_casm_types.workspace = true
apollo_infra.workspace = true
apollo_proc_macros.workspace = true
async-trait.workspace = true
mockall = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
starknet_api.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
mockall.workspace = true
starknet_api = { workspace = true, features = ["testing"] }
