[package]
name = "apollo_committer"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
testing = []

[dependencies]
apollo_infra.workspace = true
apollo_metrics.workspace = true
apollo_committer_types.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[lints]
workspace = true
