[package]
name = "apollo_committer_config"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Configuration types for Apollo committer"

[dependencies]
apollo_config.workspace = true
serde = { workspace = true, features = ["derive"] }
starknet_committer.workspace = true
starknet_patricia_storage = { workspace = true, features = ["rocksdb_storage"] }
validator.workspace = true

[lints]
workspace = true
