[package]
name = "apollo_committer_types"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
testing = ["mockall"]

[dependencies]
apollo_infra.workspace = true
apollo_metrics.workspace = true
async-trait.workspace = true
mockall = { workspace = true, optional = true }
serde.workspace = true
starknet_committer.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
mockall.workspace = true

[lints]
workspace = true
