[package]
name = "apollo_committer_types"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Type definitions and interfaces for the Apollo committer component."

[features]
testing = ["mockall", "tokio"]
os_input = ["dep:starknet_os", "starknet_os/os_input"]

[dependencies]
apollo_infra.workspace = true
apollo_metrics.workspace = true
async-trait.workspace = true
mockall = { workspace = true, optional = true }
serde.workspace = true
starknet_api.workspace = true
starknet_committer.workspace = true
starknet_os = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, optional = true }

[dev-dependencies]
mockall.workspace = true
tokio.workspace = true

[lints]
workspace = true
