[package]
edition.workspace = true
license.workspace = true
name = "apollo_compilation_utils"
repository.workspace = true
version.workspace = true
description = "A utility crate for Sierra compilation related code."

[features]
testing = []

[lints]
workspace = true

[dependencies]
cairo-lang-sierra.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-lang-utils.workspace = true
rlimit.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet-types-core.workspace = true
starknet_api.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
rstest.workspace = true

[build-dependencies]
tempfile.workspace = true
