[package]
edition.workspace = true
license.workspace = true
name = "apollo_compile_to_casm"
repository.workspace = true
version.workspace = true
description = "A utility crate for compiling Sierra code into CASM."

[lints]
workspace = true

[dependencies]
apollo_config.workspace = true
apollo_infra.workspace = true
apollo_compile_to_casm_types.workspace = true
async-trait.workspace = true
cairo-lang-starknet-classes.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet_api.workspace = true
apollo_compilation_utils.workspace = true
thiserror.workspace = true
tracing.workspace = true
validator.workspace = true

[dev-dependencies]
apollo_infra_utils.workspace = true
assert_matches.workspace = true
mempool_test_utils.workspace = true
apollo_compilation_utils = { workspace = true, features = ["testing"] }

[build-dependencies]
apollo_infra_utils.workspace = true
apollo_compilation_utils.workspace = true
