[package]
edition.workspace = true
license.workspace = true
name = "apollo_compile_to_casm"
repository.workspace = true
version.workspace = true
description = "A utility crate for compiling Sierra code into CASM."

[features]
testing = []

[lints]
workspace = true

[dependencies]
apollo_compilation_utils.workspace = true
apollo_compile_to_casm_types.workspace = true
apollo_infra.workspace = true
apollo_sierra_compilation_config.workspace = true
apollo_metrics.workspace = true
apollo_proc_macros.workspace = true
async-trait.workspace = true
cairo-lang-starknet-classes.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
apollo_compilation_utils = { workspace = true, features = ["testing"] }
apollo_infra_utils.workspace = true
assert_matches.workspace = true
mempool_test_utils.workspace = true

[build-dependencies]
apollo_compilation_utils.workspace = true
apollo_infra_utils.workspace = true
