[package]
name = "apollo_compile_to_casm_types"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
testing = ["mockall"]

[dependencies]
apollo_infra.workspace = true
apollo_metrics.workspace = true
apollo_proc_macros.workspace = true
async-trait.workspace = true
mockall = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
starknet_api.workspace = true
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
mockall.workspace = true
