[package]
edition.workspace = true
license.workspace = true
name = "apollo_compile_to_native"
repository.workspace = true
version.workspace = true
description = "A utility crate for compiling Sierra code into Cairo native."

[lints]
workspace = true

[dependencies]
apollo_compilation_utils.workspace = true
apollo_compile_to_native_types.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-native.workspace = true
serde.workspace = true
tempfile.workspace = true

[dev-dependencies]
apollo_compilation_utils = { workspace = true, features = ["testing"] }
apollo_infra_utils.workspace = true
assert_matches.workspace = true
mempool_test_utils.workspace = true
rstest.workspace = true
toml_test_utils.workspace = true

[build-dependencies]
apollo_compilation_utils.workspace = true
apollo_infra_utils.workspace = true
