[package]
edition.workspace = true
license.workspace = true
name = "apollo_compile_to_native"
repository.workspace = true
version.workspace = true
description = "A utility crate for compiling Sierra code into Cairo native."

[lints]
workspace = true

[features]
# Enables `SierraToNativeCompiler::compile_with_program`, which returns the
# AOT executor paired with the Sierra program required by cairo-native's
# libfunc profiler.
#
# This only enables profiling in the linked cairo-native library. The profiler
# symbol that `run_with_libfunc_profile` looks up is emitted by the compiler, so
# the `starknet-native-compile` binary must itself be built with its
# `with-libfunc-profiling` feature; a default-built binary yields `.so`s with no
# profiler symbol and every profiled call then fails. Point
# `SierraCompilationConfig.compiler_binary_path` at an instrumented binary.
with-libfunc-profiling = ["cairo-native/with-libfunc-profiling"]

[dependencies]
apollo_compilation_utils.workspace = true
apollo_compile_to_native_types.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-native.workspace = true
tempfile.workspace = true

[dev-dependencies]
apollo_compilation_utils = { workspace = true, features = ["testing"] }
apollo_infra_utils.workspace = true
assert_matches.workspace = true
mempool_test_utils.workspace = true
rstest.workspace = true
toml_test_utils.workspace = true
