[package]
name = "apollo_config"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "A library for handling node configuration."

[dependencies]
apollo_infra_utils = { workspace = true, optional = true }
clap = { workspace = true, features = ["env", "string"] }
colored = { workspace = true, optional = true }
const_format.workspace = true
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
strum_macros.workspace = true
thiserror.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
apollo_infra_utils = { workspace = true, features = ["testing"] }
apollo_test_utils.workspace = true
assert_matches.workspace = true
colored.workspace = true
itertools.workspace = true
lazy_static.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[features]
testing = ["apollo_infra_utils/testing", "dep:colored"]
