[package]
name = "apollo_config_manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
testing = []

[lints]
workspace = true

[dependencies]
apollo_config_manager_config.workspace = true
apollo_config_manager_types.workspace = true
apollo_consensus_config.workspace = true
apollo_infra.workspace = true
apollo_metrics.workspace = true
apollo_node_config.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
apollo_config_manager_types = { workspace = true, features = ["testing"] }
apollo_infra_utils.workspace = true
mockall.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing-test.workspace = true
