[package]
name = "apollo_config_manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Manages dynamic configuration updates and distribution across node components."

[features]
testing = []

[lints]
workspace = true

[dependencies]
apollo_batcher_config.workspace = true
apollo_class_manager_config.workspace = true
apollo_config.workspace = true
apollo_config_manager_config.workspace = true
apollo_config_manager_types.workspace = true
apollo_consensus_config.workspace = true
apollo_consensus_orchestrator_config.workspace = true
apollo_http_server_config.workspace = true
apollo_infra.workspace = true
apollo_mempool_config.workspace = true
apollo_metrics.workspace = true
apollo_node_config.workspace = true
apollo_staking_config.workspace = true
async-trait.workspace = true
notify.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
apollo_config.workspace = true
apollo_config_manager_types = { workspace = true, features = ["testing"] }
apollo_node_config = { workspace = true, features = ["testing"] }
starknet_api.workspace = true
tempfile.workspace = true
tracing-test.workspace = true
