[package]
name = "apollo_config_manager_config"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Configuration types for Apollo config manager"

[dependencies]
apollo_config.workspace = true
serde = { workspace = true, features = ["derive"] }
validator.workspace = true

[lints]
workspace = true
